cmake_minimum_required(VERSION 3.23)
project(01C__writeHelloWorld)

set(CMAKE_CXX_STANDARD 14)

add_executable(01C__writeHelloWorld main.cpp)

add_executable(01_writeHelloWorld 01_writeHelloWorld.cpp)
add_executable(02_notes 02_notes.cpp)
add_executable(03_variable 03_variable.cpp)
add_executable(04_constant 04_constant.cpp)
add_executable(05_keyword 05_keyword.cpp)
add_executable(06_identifier 06_identifier.cpp)