cmake_minimum_required(VERSION 3.23)
project(arraystructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(arraystructure main.cpp)

add_executable(01_singlearray 01_singlearray.cpp)
add_executable(02_singlearr-arrname 02_singlearr-arrname.cpp)
add_executable(03_fivepig 03_fivepig.cpp)
add_executable(04_inversion 04_inversion.cpp)
add_executable(05_bubble 05_bubble.cpp)
add_executable(06_twoarr 06_twoarr.cpp)
add_executable(07_twoarr-arrname 07_twoarr-arrname.cpp)
add_executable(08_twoarrdemo-score 08_twoarrdemo-score.cpp)