cmake_minimum_required(VERSION 3.23)
project(datetype)

set(CMAKE_CXX_STANDARD 14)

add_executable(datetype main.cpp)

add_executable(01_integer 01_integer.cpp)
add_executable(02_sizeof_keyword 02_sizeof_keyword.cpp)

add_executable(03_examples 03_examples.cpp)
add_executable(04_string 04_string.cpp)
add_executable(05_changechar 05_changechar.cpp)
add_executable(06_stringtype 06_stringtype.cpp)
add_executable(07_bool 07_bool.cpp)
add_executable(08_inputdate 08_inputdate.cpp)