cmake_minimum_required(VERSION 3.23)
project(structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(structure main.cpp)

add_executable(01_defineanduse 01_defineanduse.cpp)
add_executable(02_structurearr 02_structurearr.cpp)
add_executable(03_structurepointer 03_structurepointer.cpp)
add_executable(04_structurenestingstructure 04_structurenestingstructure.cpp)
add_executable(05_structurefunctionparameter 05_structurefunctionparameter.cpp)
add_executable(06_structureconstuse 06_structureconstuse.cpp)
add_executable(07_structuredemoA 07_structuredemoA.cpp)
add_executable(08_structuredemoB 08_structuredemoB.cpp)